# cnn

./: .gitignore  CMakeLists.txt  input.txt  main.cpp  main_fashion_mnist.cpp
include/: CNN.h  DataGenerator.h  DenseLayer.h  Filter.h  FlattenLayer.h  Layer.h  Loss.h  NeuralNetwork.h  Tensor.h
include/activation_layers/: ActivationLayer.h  Relu.h  Sigmoid.h  Softmax.h  Tanh.h
include/pooling_layers/: AveragePooling.h  MaxPooling.h  PoolingLayer.h
src/: CNN.cpp  DataGenerator.cpp  DenseLayer.cpp  Filter.cpp  FlattenLayer.cpp  Loss.cpp  NeuralNetwork.cpp
src/activation_layers/: Relu.cpp  Sigmoid.cpp  Softmax.cpp  Tanh.cpp
src/pooling_layers/: AveragePooling.cpp  MaxPooling.cpp
utils/: loadInputFromFile.h  printMatrix.h
